# tinylog

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: log.c  log.h  log_test.c
